--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "admin-lte": "^4.0.0-beta3",
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-toastr": "^19.0.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
@@ -37,6 +39,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
